--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,18 +1,24 @@
-name: Mi Primer Pipeline
+name: Despliegue a Docker Hub
 
 on:
   push:
-    branches: [ main ] # Se activa cada vez que subes algo a la rama main
+    branches: [ main ]
 
 jobs:
-  build-and-test:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Descargar código
         uses: actions/checkout@v3
 
-      - name: Construir imagen de Docker
-        run: docker build -t mi-app-devops .
+      - name: Iniciar sesión en Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Simular Test
-        run: echo "Ejecutando tests automáticos... ¡Todo OK!"
+      - name: Construir y subir imagen
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mi-app-devops:latest
