--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,23 +1,28 @@
-name: Despliegue a Docker Hub
+name: CI con Tests y Docker Hub
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build-and-push:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Descargar código
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - name: Ejecutar Pruebas Unitarias
+        run: node test.js  # El robot ejecutará nuestro script de test
 
-      - name: Iniciar sesión en Docker Hub
+  build-and-push:
+    needs: test # <--- ¡ESTO ES CLAVE! No empieza hasta que 'test' termine bien
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Login en Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Construir y subir imagen
+      - name: Build and Push
         uses: docker/build-push-action@v4
         with:
           push: true
