--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,8 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Instalar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Instalar dependencias
+        run: npm install  # <--- ESTO ES LO QUE FALTABA
+
       - name: Ejecutar Pruebas Unitarias
-        run: node test.js  # El robot ejecutará nuestro script de test
+        run: node test.js
 
   build-and-push:
     needs: test # <--- ¡ESTO ES CLAVE! No empieza hasta que 'test' termine bien
